added home page

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -15,9 +15,9 @@
     <h1>About Me</h1>
     <img alt="Image of me" src="images/image1.jpg" width="100pix">
     <h2>Brooklynn Pratt</h2>
-    <p>This is my 5th semester here at BYUI and I was born and raised in Puyallup Washington.</p>
-    <p>I am doing general studies to earn an associetes before I move down to Orem for a techincal program to become a surgical technitian. I am currently a preschool teachers aide at a daycare here in rexburg.</p>
-    <p>I love things like crafts and DIY projects. I love decorating and planning different events or rooms in my house/apartment. I also love keeping busy and go on a lot of walks and adventures with roomates or friends. Swimming has been apart of my life for as long as I can remember. My family aslo goes on a ton of vactions every year to mostly beachy areas so I will never say no to warm weather and a body of water!</p>
-    <p>I hope to learn more about the way websites work and how to create them because I feel like it will be a useful skill to have, especially with the rise in popularity in small buisnesses.</p>
+    <p class='main-para'>This is my 5th semester here at BYUI and I was born and raised in Puyallup Washington.</p>
+    <p class='main-para'>I am doing general studies to earn an associetes before I move down to Orem for a techincal program to become a surgical technitian. I am currently a preschool teachers aide at a daycare here in rexburg.</p>
+    <p class='main-para'>I love things like crafts and DIY projects. I love decorating and planning different events or rooms in my house/apartment. I also love keeping busy and go on a lot of walks and adventures with roomates or friends. Swimming has been apart of my life for as long as I can remember. My family aslo goes on a ton of vactions every year to mostly beachy areas so I will never say no to warm weather and a body of water!</p>
+    <p class='main-para'>I hope to learn more about the way websites work and how to create them because I feel like it will be a useful skill to have, especially with the rise in popularity in small buisnesses.</p>
 </body>
 </html>
