--- a/wwr/index.html
+++ b/wwr/index.html
@@ -58,7 +58,7 @@
         </section>
     </main>
     <footer>
-        <p>Splash Zone &copy; 20XX - Brooklynn Pratt</p>
+        <p>Splash Zone &copy; 20XX - Brooklynn L. Pratt</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
