--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -21,10 +21,10 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-    <p>FAQ's!</p>
-        </section>
     </div>
-    <main class="home-grid">
+    <main class="sub-page">
+        <div class=title-faq> FAQ'S </div>
+        <img class="mountains-2" src="images/mountains.jpg" alt="Misty mountains">
         <div class="grid-container">
             <div class="grid-child-1">
                 Q: Is this a good trip for kids?
@@ -60,6 +60,9 @@
                 <p>A: To help ensure your safety, our guides are all certified in Wilderness First aid and all start with at least 3 years of rafting experience.</p>
             </div>
         </div>
+        <img class="mountains-3" src="images/mountains.jpg" alt="Misty mountains">
+        <div class="end-message">
+        Next Summer booking open now!</div>
     </main>
     <footer>
         <p>Splash Zone &copy; 20XX - Brooklynn L. Pratt</p>
